@@ -3,6 +3,7 @@ name: Windows MSYS
 on: [push, pull_request]
 
 env:
+  NSIS_VERSION: 3.10
   DISABLE_CCACHE: 1
   NJOBS: 4
 
@@ -45,6 +46,8 @@ jobs:
           mingw-w64-x86_64-cmake
           mingw-w64-x86_64-gcc
           mingw-w64-x86_64-pkgconf
+    - name: Install dependencies
+      run: ./ports/ci/windows-msys/install_deps.sh
     - name: Release Build
       if: ${{ startsWith(github.ref, 'refs/tags/') }}
       run: ./ports/ci/windows-msys/build.sh
